[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mslive"
version = "0.1.0"
description = "MS42 live logger core (transport/record/replay/polling scaffold)"
requires-python = ">=3.10"
dependencies = ["pygame>=2.5.0", "pyserial>=3.5"]

[project.scripts]
mslive = "mslive.cli:main"

[tool.setuptools]
# Only package the Python code, ignore top-level folders like polls/
packages = { find = { include = ["mslive*"], exclude = ["polls*"] } }
